fix nav bar on tablet + mobile

--- a/_assets/stylesheets/application.css.sass
+++ b/_assets/stylesheets/application.css.sass
@@ -128,6 +128,9 @@ a
     &:nth-child(3)
       @include span-columns(4)
 
+      @include media($tablet)
+        @include span-columns(8)
+
     @include media($tablet)
       @include fill-parent
       margin: 0
@@ -151,7 +154,7 @@ footer
   padding:
     top: $margin
     bottom: $margin * 2
-  
+
   a
     color: #FFF
 
